# ddrl

./: .gitignore  LICENSE  PhD.bib  README.md  fullBuild.bash
agent/cacla/: CMakeLists.txt
agent/cacla/data/: ada-polset.ini  ada-vset.ini  base-cacla-off-3d.ini  base-cacla-off-on.ini  base-cacla-off.ini  base-cacla-on.ini  cacla-on.ini  cacla.ini  config-3d.ini  cp-cacla-off.ini  cp-cacla-on.ini  cp-polset.ini  cp-vset.ini  distance.m  load_ana.m  load_ana_pol.m
agent/cacla/data/polset-cmaes/: acrobot.tar.xz  cartpole.tar.xz  vset-cartpole.tar.xz
agent/cacla/data/vset-cmaes/: acrobot.tar.xz
agent/cacla/include/: AdPACAg.hpp  BaseCaclaAg.hpp  CaclaTDAg.hpp  CorPeNFACAg.hpp  Critic.hpp  DPeNFACAg.hpp  FittedNeuralACAg.hpp  FittedQACAg.hpp  FittedQIterationAg.hpp  HPeNFACAg.hpp  HybridCaclaAg.hpp  HybridCaclaAgAon.hpp  LinMLP.hpp  NFACVMemAg.hpp  NeuralFittedAC.hpp  Off2PhCaclaAg.hpp  OffNFACAg.hpp  OffNFACQAg.hpp  OffPolSetACFitted.hpp  OffVSetACFitted.hpp  OfflineCaclaAg.hpp  OfflineCaclaAg.hpp.save  OfflineCaclaAg2.hpp  OfflineCaclaAg3.hpp  OfflineCaclaAg4.hpp  OfflineCaclaAg4ac.hpp  OfflineCaclaAgIS.hpp  OfflineCaclaAgLW.hpp  OnPACAg.hpp  PSEPeNFACAg.hpp  PenNFACAg.hpp  SemiFittedNeuralACAg.hpp  Trajectory.hpp  Trajectory.old.hpp  kde.hpp
agent/cacla/include/kdtree++/: kdtree.hpp  node.hpp  region.hpp
agent/cacla/include/old/: Critic.hpp  LinMLP.hpp  NeuralFittedACDC.hpp  OffPolSetACFitted.hpp  OffVSetACFitted.hpp  TrajectoryUtest.cpp
agent/cacla/include/panene/: dist.h  kd_tree.h  kd_tree_index.h  (+2 more)
agent/cacla/openai/: agent.py  demo-opensim.py  nfac-opensim.py  prepare_test  prepare_test_best  send-opensim.py
agent/cacla/src/: kde.cpp  nfac.cpp  openai.cpp
agent/cmaes/: CMakeLists.txt
agent/cmaes/data/: acrobot-3l.ini  acrobot.ini  cartpole.ini  cmaes-acrobot-3l.ini  cmaes-acrobot.ini  cmaes-cartpole.ini  cmaes-half_cheetah.ini  cmaes-humanoid.ini  polset.m
agent/cmaes/include/: CMAESAg.hpp  OCMAESAg.hpp  PIDControllerLearn.hpp  RandomNNAg.hpp
agent/deepqn/: CMakeLists.txt
agent/deepqn/data/: best-ddpg-halfcheetah.ini  best-denfac-halfcheetah.ini  ddpg-ada1d.ini  ddpg-cp.ini  ddpg.ini  nfac-ada.ini
agent/deepqn/include/: DeepQCaclaAg.hpp  DeepQNAg.hpp  FusionOOAg.hpp  MLP.hpp  NeuralFittedACAg.hpp  NeuralFittedMultiACAg.hpp  NeuralFittedMultiACAg.hpp.old  TD3Ag.hpp
agent/fedioun/: CMakeLists.txt
agent/fedioun/data/: adenfac-acrobot.ini  adenfac-cartpole.ini  adenfac-cheetah.ini  adenfac-humanoid.ini  config.ini
agent/fedioun/include/: AugmentedDENFAC.hpp  SimpleDENFAC.hpp
agent/fedioun/src/: AugmentedDENFAC.cpp  SimpleDENFAC.cpp
agent/mnist_digits/: CMakeLists.txt
agent/mnist_digits/data/: config.ini
agent/mnist_digits/include/: mnist_extraction.hpp
agent/mnist_digits/src/: mnist_digits.cpp  mnist_extraction.cpp
agent/old/power-dmp/: CMakeLists.txt
agent/old/qlearning-nn/: CMakeLists.txt
agent/power-dmp/: CMakeLists.txt  cmake
agent/power-dmp/data/: power-dmp.ini
agent/power-dmp/include/: Algo.hpp  Config.hpp  EigenConfig.h  Kernel.hpp  PowerAg.hpp
agent/power-dmp/src/: AdvancedAcrobotDiscret.cpp  Algo.cpp  Kernel.cpp  PowerAg.cpp
agent/qlearning-nn/: CMakeLists.txt
agent/qlearning-nn/cmake/: FindAdvancedAcrobot.cmake  FindCommonDRL.cmake  FindFANN.cmake  FindTBB.cmake
agent/qlearning-nn/data/: qlearning.ini
agent/qlearning-nn/include/: ContinuousAcAg.hpp  ContinuousAcTAg.hpp  DiscretAction.hpp  DiscretActionAg.hpp  MLP.hpp  UNLF2.hpp
agent/qlearning-nn/src/: DiscretAction.cpp  DiscretActionAg.cpp  MLP.cpp  UNLF2.cpp
common/: CMakeLists.txt  config.ini
common/cmake/: BoostConfig.cmake  Caffe.in  CaffeConfig.cmake  Callable.cmake  Config.cmake  FindAdvancedAcrobot.cmake  FindCaffe.cmake  FindCartpole.cmake  FindCommonDRL.cmake  FindFANN.cmake  FindFreeImage.cmake  FindHalfCheetah.cmake  FindHumanoid.cmake  FindODE.cmake  FindODEEnv.cmake  FindOPTPP.cmake  GTest.cmake  GTest.in  ODE.in  ODEConfig.cmake
common/data/: Doxyfile  minimal_config.ini
common/include/arch/: AACAgent.hpp  AAgent.hpp  ACSimulator.hpp  AEnvironment.hpp  ARLAgent.hpp  CommonAE.hpp  DefaultParam.hpp  DpmtAgent.hpp  Dummy.hpp  Example.hpp  Simulator.hpp
common/include/bib/: Assert.hpp  Chrono.hpp  Combinaison.hpp  Converger.hpp  Dumper.hpp  IniParser.hpp  Logger.hpp  MetropolisHasting.hpp  MyType.hpp  OnlineNormalizer.hpp  OrnsteinUhlenbeckNoise.hpp  Prober.hpp  RTNorm.hpp  Seed.hpp  Singleton.hpp  Thread.hpp  UTest.hpp  Utils.hpp  XMLEngine.hpp
common/include/nn/: DODevMLP.hpp  DevMLP.hpp  MLP.hpp
common/include/zoo/: RoboschoolHalfCheetah.hpp
common/src/: Chrono.cpp  MLP.cpp  Prober.cpp  RTNorm.cpp  Seed.cpp  Utils.cpp
common/src/test/: CaffeUtest.cpp  DpmtDummySimulator.cpp  DummySimulator.cpp  MetroHastUtest.cpp  SeedUtest.cpp  SimulatorUtest.cpp  Utest.cpp  UtilsUtest.cpp
common/src/zoo/: RoboschoolHalfCheetah.cpp
environment/advanced-acrobot/: CMakeLists.txt
environment/advanced-acrobot/cmake/: FindCommonDRL.cmake  FindDrawstuff.cmake
environment/advanced-acrobot/data/: acrobot-3l.ini  acrobot.ini  acrobot.utest.ini
environment/advanced-acrobot/include/: AdvancedAcrobotEnv.hpp  AdvancedAcrobotWorld.hpp  AdvancedAcrobotWorldView.hpp  Draw.hpp  ODEFactory.hpp  ODEObject.hpp
environment/advanced-acrobot/src/: AdvancedAcrobotEnv.cpp  AdvancedAcrobotWorld.cpp  AdvancedAcrobotWorldView.cpp  Draw.cpp  ODEFactory.cpp  ODEObject.cpp
environment/cartpole/: CMakeLists.txt
environment/cartpole/data/: cartpole.ini
environment/cartpole/include/: CartpoleEnv.hpp  CartpoleWorld.hpp  CartpoleWorldView.hpp
environment/cartpole/src/: CartpoleWorld.cpp  CartpoleWorldView.cpp
environment/half_cheetah/: CMakeLists.txt
environment/half_cheetah/data/: half_cheetah.ini
environment/half_cheetah/include/: HalfCheetahEnv.hpp  HalfCheetahWorld.hpp  HalfCheetahWorldView.hpp
environment/half_cheetah/src/: HalfCheetahWorld.cpp  HalfCheetahWorldView.cpp
environment/ode-env/: CMakeLists.txt
environment/ode-env/include/: Draw.hpp  ODEFactory.hpp  ODEObject.hpp
environment/ode-env/src/: Draw.cpp  ODEFactory.cpp  ODEObject.cpp
(+167 files in other folders)
